allowing ALL tab groups to be pinned

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -20,9 +20,13 @@
   <body>
     <form>
       <p class="md-typescale-body-medium">Pinned tab groups</p>
+      <label class="md-typescale-body-medium">
+        <md-checkbox></md-checkbox>
+        Treat all tab groups as pinned
+      </label>
       <md-chip-set>
       </md-chip-set>
-      <md-outlined-text-field label="New pinned tab group" value=""></md-outlined-text-field>
+      <md-outlined-text-field label="Tab group" value=""></md-outlined-text-field>
 
       <md-outlined-button type="reset">Reset to defaults</md-outlined-button>
     </form>
